# AirLife

./: .clang-tidy  CMakeLists.txt  Demo_en.ts  Demo_fr.ts  README.md
resource/: appicon.rc  resource.qrc
src/: main.cpp
src/Base/: CMakeLists.txt  component.cpp  component.h
src/Core/: AirLifeInputTipWidget.h  CMakeLists.txt  ClassWorkHandler.cpp  ClassWorkHandler.h  GuiHandler.cpp  GuiHandler.h  InitialClassWorkHandler.cpp  InitialClassWorkHandler.h  InitialHandler.cpp  InitialHandler.h  LoginHandler.cpp  LoginHandler.h  ReadFileHandler.cpp  ReadFileHandler.h  UpdateHandler.cpp  UpdateHandler.h  WriteFileHandler.cpp  WriteFileHandler.h
src/UI/: CMakeLists.txt
src/UI/dialogs/: airlifeerrordialog.cpp  airlifeerrordialog.h  airlifeerrordialog.ui  airlifeinfodialog.cpp  airlifeinfodialog.h  airlifeinfodialog.ui  airliferunnigdialog.cpp  airliferunnigdialog.h  airliferunnigdialog.ui  airliferunningdialog.cpp  airliferunningdialog.h  airliferunningdialog.ui  logindialog.cpp  logindialog.h  logindialog.ui
src/UI/easterEgg/: hui.cpp  hui.h  hui.ui
src/UI/mainWindows/: administermainwindow.cpp  administermainwindow.h  administermainwindow.ui  customermainwindow.cpp  customermainwindow.h  customermainwindow.ui
src/UI/test/: CMakeLists.txt  testwindows.cpp  testwindows.h  testwindows.ui
src/UI/widgets/: informationfinderwidget.cpp  informationfinderwidget.h  informationfinderwidget.ui  informationloggerwidget.cpp  informationloggerwidget.h  informationloggerwidget.ui  informationmodifierwidget.cpp  informationmodifierwidget.h  informationmodifierwidget.ui  ordercreatorwidget.cpp  ordercreatorwidget.h  ordercreatorwidget.ui  orderdestroyerwidget.cpp  orderdestroyerwidget.h  orderdestroyerwidget.ui  passwordmodifier.cpp  passwordmodifier.h  passwordmodifier.ui  userandaccountmanager.cpp  userandaccountmanager.h  userandaccountmanager.ui
